sumo/tests/sumo/output/meandata_edgebased/errors/broken_number/errors.sumo
Error: Attribute 'begin' in definition of meandata-edge 'dump_15' is not a real number.
Quitting (on error).
